# dora_mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COPILOT_FIX_SUMMARY.md  COPILOT_STUDIO.md  COPILOT_STUDIO_SETUP.md  DOCKER.md  Dockerfile  FLY_DEPLOYMENT.md  FULLTEXT_DISABLED.md  HTTP_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  METRICS.md  QUICKSTART.md  QUICK_START_COPILOT.md  README.md  SECURITY_SUMMARY.md  SSE_REMOVAL_SUMMARY.md  TESTING.md  TEST_IMPROVEMENTS.md  USAGE.md  docker-compose.yml  docker.sh  example_config.json  example_usage.py  fly.toml  open_tool_description.yaml  openapi-copilot-studio.yaml  openapi-minimal.yaml  openapi.yaml  openapi_formatted.json  openapi_full.json  pyproject.toml  test_mcp_endpoint.py  validate_urls.py
.github/workflows/: fly-deploy.yml
dora_mcp/: __init__.py  server.py
examples/: README.md  sample_DORA.html  test_search.py
scripts/: compare_results.py
src/dora_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_docker.py  test_server.py  test_with_metrics.py
